--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -28,7 +28,7 @@
           Browse
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+          Medi-List
         </ion-item>
       </ion-list>
     </ion-content>
