--- a/www/templates/medi.html
+++ b/www/templates/medi.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Medi Detail">
   <ion-content>
     <h1>{{medi.name}}</h1>
+    <ul>
+    	<li>Einheit: {{medi.einheit}}</li>
+    	<li>Anwendungsform: {{medi.anwendungsform}}</li>
+    	<li>Packungsgrösse: {{medi.packungsgroesse}}</li>
+    	<li>Rezeptpflichtig: {{medi.rezeptpflichtig}}</li>
+    	<li>Rezept Ablaufdatum: {{medi.rezeptende}}</li>
+    </ul>
   </ion-content>
 </ion-view>
