formular hinzugefügt, local Storage im Angular Service

--- a/www/templates/medis.html
+++ b/www/templates/medis.html
@@ -1,14 +1,11 @@
 <ion-view view-title="Medi-Liste">
   <ion-content>
+  <a href="#/app/addMedi">
+  <button class="button button-block button-balanced">
+  Medikament hinzufügen
+</button>
+</a>
     <ion-list>
-      <div class="item item-input-inset">
-    <label class="item-input-wrapper">
-      <input type="text" placeholder="Medikament hinzufügen">
-    </label>
-    <button class="button button-small">
-      Submit
-    </button>
-  </div>
       <ion-item ng-repeat="medi in medis" href="#/app/medis/{{medi.id}}">
         {{medi.name}}
       </ion-item>
