--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,8 +27,11 @@
         <ion-item nav-clear menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Medi-List
+        <ion-item nav-clear menu-close href="#/app/medis">
+          Medi-Liste
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/addMedi">
+          Medi hinzufügen
         </ion-item>
       </ion-list>
     </ion-content>
