neuen Service von http://learn.ionicframework.com/formulas/localstorage/ und AddMediController hinzugefügt

--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Medikament hinzufügen">
     <ion-content>
-        <form action="">
+        <form ng-submit="addMedi()">
             <div class="list">
                 <label class="item item-input">
                     <input type="text" ng-model='medi.name' placeholder="Name">
