--- a/www/templates/medi.html
+++ b/www/templates/medi.html
@@ -8,5 +8,6 @@
     	<li>Rezeptpflichtig: {{medi.rezeptpflichtig}}</li>
     	<li>Rezept Ablaufdatum: {{medi.rezeptende}}</li>
     </ul>
+    <button ng-click="deleteMedi()">delete</button>
   </ion-content>
 </ion-view>
