--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Medikament hinzufügen">
     <ion-content>
         <form novalidate>
+        <h3>Medikament erfassen</h3>
             <div class="list">
                 <label class="item item-input">
                     <input type="text" ng-model='medi.name' placeholder="Name">
@@ -28,7 +29,7 @@
                     <input type="date" ng-model='medi.rezeptende'>
                 </label>
                 <button class="button button-block button-positive" ng-click="addMedi(medi)">
-                    Submit
+                    Medikament speichern
                 </button>
             </div>
         </form>
