--- a/www/templates/addMedi.html
+++ b/www/templates/addMedi.html
@@ -6,8 +6,12 @@
                 <label class="item item-input">
                     <input type="text" ng-model='medi.name' placeholder="Name">
                 </label>
+                                <label class="item item-input">
+                    <input type="text" ng-model='medi.menge' placeholder="Menge z.B. 250">
+                </label>
+
                 <label class="item item-input">
-                    <input type="text" ng-model='medi.einheit' placeholder="Einheit z.B. 250 mg">
+                    <input type="text" ng-model='medi.einheit' placeholder="Einheit z.B. mg">
                 </label>
                 <label class="item item-input">
                     <input type="text" ng-model='medi.anwendungsform' placeholder="Anwendungsform z.B. Tabletten">
